Redirect direct client launch to SyncApp; pass --synced after sync
- ClientMain: if launched without --synced, finds SyncApp at
  ~/.adventure-friends/sync/syncapp.jar, launches it, and exits.
  Falls back to re-launching self with --synced if SyncApp not found.
- SyncApp: passes --synced when launching game-client.jar so the client
  skips the redirect on the second launch.
- SyncApp: copies itself to ~/.adventure-friends/sync/syncapp.jar after
  sync so the client can always find it.
- client/build.gradle: passes --synced automatically for ./gradlew :client:run
  so the redirect is skipped in development.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>